# renderer3d

./: .gitignore  CMakeLists.txt  compile_commands.json  test.cpp  testv1.c  todo.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: base.h  lines.h  matrix.h  rectangle.h  triangle.h
src/: color_wheel.c  lines.c  main.c  matrix.c  rectangle.c  renderer.c  triangle.c
